Another go at fixing the mobile overflow issue

--- a/output/content/style.css
+++ b/output/content/style.css
@@ -4,13 +4,13 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto';
-  max-width: 100%;
-  overflow-x: hidden;
 }
 
 #container {
   display: flex;
   flex-direction: column;
+  /*max-width: 100%;*/
+  overflow-x: hidden;
 }
 
 .layout {
